--- a/templates/school/adminbase.html
+++ b/templates/school/adminbase.html
@@ -134,8 +134,8 @@
 
     .content {
       margin-left: 250px;
-      background: url(background.png) no-repeat;
-      background-position: center;
+      /*background: url(background.png) no-repeat;
+      background-position: center;*/
       background-size: cover;
       height: 100vh;
       transition: 0.5s;
@@ -204,10 +204,7 @@
     <br><br><br>
     {% include "school/footer.html" %}
   </div>
-  <!--content end-->
-  <!--
-      written By : sumit kumar
-      -->
+  
 </body>
 
 </html>
