--- a/templates/school/studentclick.html
+++ b/templates/school/studentclick.html
@@ -4,7 +4,7 @@
 <br>
 <br>
 
-<div class="jumbotron" style="margin-bottom:0px;">
+<div class="jumbotron" style="margin-bottom:0px;  height: 90vh">
   <h1 class="display-4">Student Login Panel</h1>
   <p class="lead">Welcome to School Management System.</p>
   <hr class="my-4">
