--- a/templates/school/teacherbase.html
+++ b/templates/school/teacherbase.html
@@ -134,8 +134,8 @@
 
     .content {
       margin-left: 250px;
-      background: url(background.png) no-repeat;
-      background-position: center;
+      /*background: url(background.png) no-repeat;
+      background-position: center;*/
       background-size: cover;
       height: 100vh;
       transition: 0.5s;
