--- a/templates/school/admin_update_student.html
+++ b/templates/school/admin_update_student.html
@@ -48,7 +48,7 @@
 
 </head>
 
-<!------ student update page by admin(sumit)  ---------->
+<!------ student update page by admin()  ---------->
 <form method="post">
   {% csrf_token %}
   <div class="container register-form">
