--- a/templates/school/index.html
+++ b/templates/school/index.html
@@ -45,7 +45,7 @@
   <br>
   <div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">
     <br><br><br><br><br>
-    <h1 class="display-4 glow"><b>School Management System</b></h1>
+    <h1 class="display-4 glow"><b>School Management </b></h1>
 
     
     <!--<h3 class="text-center" style="color:white;">Built using Python Django</h3>-->
