--- a/templates/school/teacherclick.html
+++ b/templates/school/teacherclick.html
@@ -3,8 +3,8 @@
 <br>
 <br>
 <div class="jumbotron" style="margin-bottom:0px;  height: 90vh">
-  <h1 class="display-4">Teacher Login Panel</h1>
-  <p class="lead">Welcome to School Management System.</p>
+  <h1 class="display-4">Teacher Login </h1>
+  <p class="lead">Welcome to School Management .</p>
   <hr class="my-4">
   <p>Please select any to contiue...</p>
   <p class="lead">
