--- a/templates/school/admin_add_student.html
+++ b/templates/school/admin_add_student.html
@@ -45,11 +45,8 @@
 
 </head>
 
-<!--
-written By : sumit kumar
--->
 
-<!------ signup page for student by admin(sumit)  ---------->
+<!------ signup page for student by admin()  ---------->
 <form method="post">
   {% csrf_token %}
   <div class="container register-form">
