--- a/templates/school/admin_update_teacher.html
+++ b/templates/school/admin_update_teacher.html
@@ -48,7 +48,7 @@
 
 </head>
 
-<!------ signup page for teacher by admin(sumit)  ---------->
+<!------ signup page for teacher by admin()  ---------->
 <form method="post">
   {% csrf_token %}
   <div class="container register-form">
