--- a/templates/school/adminclick.html
+++ b/templates/school/adminclick.html
@@ -7,8 +7,8 @@
 <br>
 
 <div class="jumbotron" style="margin-bottom:0px; height: 90vh">
-  <h1 class="display-4">Admin Login Panel</h1>
-  <p class="lead">Welcome to School Management System.</p>
+  <h1 class="display-4">Admin Login </h1>
+  <p class="lead">Welcome to School Management .</p>
   <hr class="my-4">
   <p>Please select any to contiue...</p>
   <p class="lead">
