--- a/templates/school/student_view_attendance_ask_date.html
+++ b/templates/school/student_view_attendance_ask_date.html
@@ -48,7 +48,7 @@
 
 </head>
 
-<!------ date page for attendance by admin(sumit)  ---------->
+<!------ date page for attendance by admin()  ---------->
 <form method="post">
   {% csrf_token %}
   <div class="container register-form">
