--- a/templates/school/studentlogin.html
+++ b/templates/school/studentlogin.html
@@ -62,7 +62,7 @@
   <br>
   <br><br>
 
-  <!--- signup page for teacher by admin(sumit)  ---------->
+  <!--- signup page for teacher by admin()  ---------->
   <form method="post">
     {% csrf_token %}
     <div class="container register-form">
