--- a/templates/school/teacher_notice.html
+++ b/templates/school/teacher_notice.html
@@ -45,7 +45,7 @@
 
 </head>
 
-<!------ notice page for  by admin(sumit)  ---------->
+<!------ notice page for  by admin()  ---------->
 <form method="post">
   {% csrf_token %}
   <div class="container register-form">
