--- a/templates/school/teacherlogin.html
+++ b/templates/school/teacherlogin.html
@@ -62,7 +62,7 @@
   <br>
   <br><br>
 
-  <!--- signup page for teacher by admin(sumit)  ---------->
+  <!--- signup page for teacher by admin()  ---------->
   <form method="post">
     {% csrf_token %}
     <div class="container register-form">
@@ -97,9 +97,7 @@
   </form>
 
   <br><br><br>
-  <!--
-written By : sumit kumar
--->
+
   {% include "school/footer.html" %}
 </body>
 
